apis/mdk-mcp-server/res/schemas/26.6/App.schema.example.md

----
## Examples

```json
// Application.app
{
  "_Name": "MDKApp",
  "MainPage": "/MDKApp/Pages/Menu.page",
  "OnLaunch": "/MDKApp/Actions/CreateService.action",
  "OnUnCaughtError": "/MDKApp/Actions/DisplayErrorMessage.action",
  "OnExit": "/MDKApp/Rules/AppExit.js",
  "OnWillUpdate": "/MDKApp/Rules/OnWillUpdate.js",
  "OnDidUpdate": "/MDKApp/Rules/OnDidUpdate.js",
  "OnSuspend": "/MDKApp/Rules/OnSuspend.js",
  "OnResume": "/MDKApp/Rules/OnResume.js",
  "OnLinkDataReceived": "/MDKApp/Rules/OnLinkDataReceived.js", 
  "Styles": "/MDKApp/Styles/Styles.css",
  "Version": "/MDKApp/Rules/MetadataVersion.js",
  "Localization": "/MDKApp/i18n/i18n.properties",
  "OnReceiveForegroundNotification": "/MDKApp/Rules/ForegroundNotificationEventHandler.js",
  "OnReceiveFetchCompletion": "/MDKApp/Rules/ContentAvailableEventHandler.js",
  "OnReceiveNotificationResponse": "/MDKApp/Rules/ReceiveNotificationResponseEventHandler.js",
  "OnUserSwitch": "/MDKApp/Actions/DisplayUserSwitchMessage.action"
}
```

### LinkData Example
For a deeplink URL of "mdkclient://sap.com?ProductId=123&Description=New software&Verified=true#tagExample-1", access the link data using `context.getEventData()`:

```javascript
// OnLinkDataReceived.js
export default function OnLinkDataReceived(context) {
  const eventData = context.getEventData();
  if (eventData) {
    console.log(eventData.eventName);   // 'OnLinkDataReceived'
    console.log(eventData.urlScheme);   // 'mdkclient'
    console.log(eventData.url);         // 'sap.com'
    console.log(eventData.parameters);  // { ProductId: '123', Description: 'New software', Verified: 'true' }
    console.log(eventData.hash);        // '#tagExample-1'
    console.log(eventData.originalURL); // 'mdkclient://sap.com?ProductId=123&Description=New software&Verified=true#tagExample-1'
  }
}
```